--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -18,7 +18,7 @@
   }
 </ul>
 
-<p>@Html.ActionLink("Add new engineer", "Create")</p>
-<p>@Html.ActionLink("Add new Machine", "Create", "Machines")</p>
+<p>@Html.ActionLink("Add new Machine", "Create")</p>
+<p>@Html.ActionLink("Add new Engineer", "Create", "Engineers")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
 <p>@Html.ActionLink("Search", "Search")</p>
