--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -14,4 +14,4 @@
   @Html.TextBoxFor(model => model.MachineName)
   <input type="submit" value="Add new Machine" class="btn btn-primary"/>
 }
-<p>@Html.ActionLink("Show all restaurants", "Index")</p>
+<p>@Html.ActionLink("Show all machines", "Index")</p>
