--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -20,7 +20,7 @@ else
   <ul>
     @foreach(EngineerMachine join in Model.JoinEntities)
     {
-      <li>Engineer: @join.Engineer.EngineerName</li>
+      <li>Engineer: @join.Engineer.EngineerName | @join.Engineer.EngineerStatus</li>
       @using (Html.BeginForm("DeleteJoin", "Machine"))
       {
         @Html.Hidden("machineId", Model.MachineId)
