--- a/Factory/Views/Shared/Nav.cshtml
+++ b/Factory/Views/Shared/Nav.cshtml
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary custom-navbar">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">FactoryApp</a>
+    <img src="./assets/wrench.png" style="max-height: 24px; max-width: 24px;" alt="Logo">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,9 +16,7 @@
           <a class="nav-link" href="/Engineers">All Engineers</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Expand for Options</a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/Engineers/Create">Add an Engineer</a></li>
             <li><a class="dropdown-item" href="/Machines/Create">Add a Machine</a></li>
