--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -6,19 +6,24 @@
 <hr>
 <h1>Engineers</h1>
 <hr>
-@if (@Model.Count == 0)
-{
-  <h3>No engineers have been added yet!</h3>
-} 
+<div class="card">
+  <div class="card-body">
+    @if (@Model.Count == 0)
+    {
+      <h3>No engineers have been added yet</h3>
+    } 
 
-<ul>
-  @foreach(Engineer engineer in Model)
-  {
-    <li>@Html.ActionLink($"{engineer.EngineerName}", "Details", new { id = engineer.EngineerId })</li>
-  }
-</ul>
+    <ul>
+      @foreach(Engineer engineer in Model)
+      {
+        <li>@Html.ActionLink($"{engineer.EngineerName}" + " | " + $"{engineer.EngineerStatus}", "Details", new { id = engineer.EngineerId })</li>
+      }
+    </ul>  
+  </div>
+</div>
 
-<p>@Html.ActionLink("Add new engineer", "Create")</p>
-<p>@Html.ActionLink("Add new Machine", "Create", "Machines")</p>
+
+<p>@Html.ActionLink("Add New Engineer", "Create")</p>
+<p>@Html.ActionLink("Add New Machine", "Create", "Machines")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
 <p>@Html.ActionLink("Search", "Search")</p>
