--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -6,19 +6,21 @@
 <hr>
 <h1>Machines</h1>
 <hr>
-@if (@Model.Count == 0)
-{
-  <h3>No machines have been added yet!</h3>
-} 
+<div class="card">
+  <div class="card-body">
+    @if (@Model.Count == 0)
+    {
+      <h3>No machines have been added yet</h3>
+    } 
 
-<ul>
-  @foreach(Machine machine in Model)
-  {
-    <li>@Html.ActionLink($"{machine.MachineName}", "Details", new { id = machine.MachineId })</li>
-  }
-</ul>
-
-<p>@Html.ActionLink("Add new Machine", "Create")</p>
-<p>@Html.ActionLink("Add new Engineer", "Create", "Engineers")</p>
+    <ul>
+      @foreach(Machine machine in Model)
+      {
+        <li>@Html.ActionLink($"{machine.MachineName}" + " | " + $"{machine.MachineStatus}", "Details", new { id = machine.MachineId })</li>
+      }
+    </ul>  
+  </div>
+</div>
+<p>@Html.ActionLink("Add New Machine", "Create")</p>
+<p>@Html.ActionLink("Add New Engineer", "Create", "Engineers")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
-<p>@Html.ActionLink("Search", "Search")</p>
