--- a/Factory/Views/Shared/Nav.cshtml
+++ b/Factory/Views/Shared/Nav.cshtml
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary custom-navbar">
   <div class="container-fluid">
-    <img src="./assets/wrench.png" style="max-height: 24px; max-width: 24px;" alt="Logo">
+    <a href="/"><img src="~/assets/wrench.png" style="max-height: 24px; max-width: 24px;" alt="Logo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/Machines">All Machines</a>
@@ -27,7 +27,7 @@
       </ul>
       <form class="d-flex" role="search" action="/Engineers/Results" method="post">
         <input class="form-control me-2" type="search" name="query" placeholder="Search Engineers" aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit">Search</button>
+        <button class="btn btn-outline-dark" type="submit">Search</button>
       </form>
     </div>
   </div>
