--- a/Factory/wwwroot/css/styles.css
+++ b/Factory/wwwroot/css/styles.css
@@ -8,3 +8,17 @@ div#footer {
 	padding:8px;
 	font-size: 15px;
 }
+
+.navbar {
+	background-color: #f9c10b;
+}
+
+/* .row{
+	width:100%;
+} */
+
+.nav-item{
+	font-weight: 900;
+	color: black;
+}
+
