--- a/Factory/Views/Engineers/Search.cshtml
+++ b/Factory/Views/Engineers/Search.cshtml
@@ -11,7 +11,7 @@
   @Html.LabelFor(model => model.EngineerName)
   @Html.TextBoxFor(model => model.EngineerName)
 
-  <input type="submit" value="Search engineer" class="btn btn-primary"/>
+  <input type="submit" value="Search engineer" class="btn btn-warning"/>
 }
 <p>@Html.ActionLink("Add new engineer", "Create")</p>
 <p>@Html.ActionLink("Add new Machine", "Create", "Machines")</p>
