--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -6,6 +6,34 @@
 <hr>
 <h1>Machine and Engineer Management System:</h1>
 <hr>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div id="carouselExampleFade" class="carousel slide carousel-fade">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="~/assets/construction1.jpg" width="300px" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="~/assets/construction2.jpg" width="300px" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="~/assets/construction3.jpg" width="300px" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<hr>
 <div class="row">
     <div class="col-md-6">
         <div class="card custom-card">
